fix: not number id & mobile overlap of main content and menu

--- a/src/components/SlideMenuMobile/slideMenuMobile.module.css
+++ b/src/components/SlideMenuMobile/slideMenuMobile.module.css
@@ -6,7 +6,7 @@
 
 }
 .left {
-
+    width: 100%;
 }
 .right {
     position: absolute;
